<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".SIgnUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:contentDescription="logo"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"></ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">
                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/username"
                    android:textSize="15dp"
                    android:background="@drawable/input_bg"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/phone"
                    android:textSize="15dp"
                    android:background="@drawable/input_bg"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="15dp"
                    android:background="@drawable/input_bg"
                    android:hint="@string/password"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword" />
                <EditText
                    android:id="@+id/editTextConfirmedPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="15dp"
                    android:background="@drawable/input_bg"
                    android:hint="@string/confirmed_password"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <Button
                            android:id="@+id/btn_signup"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/primary"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/signup"
                            android:onClick="onSignUpBtnClick"
                            android:textSize="15dp"></Button>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>